--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="theme-btn" onclick="toggleTheme()">🌙 Toggle Dark Mode</button>
+        <button class="theme-btn" onclick="toggleTheme()">🌙Dark Mode</button>
         <h2>🎨 Colorful To-Do List</h2>
         <div class="input-container">
             <input type="text" id="taskInput" class="task-input" placeholder="Enter a task...">
